# CurveForge

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  OPTIMIZER_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.txt  TILED_CURVE_IMPLEMENTATION_SUMMARY.md  TILED_CURVE_README.md  VOLATILITY_IMPLEMENTATION_SUMMARY.md  plot_cma.py  vcpkg.json
docs/: BSPLINE_MATH.md  IMPLEMENTATION_SUMMARY_IMPLIED_FORWARD_RATE.md  IMPLIED_FORWARD_RATE.md  INTERPOLATION.md  OPTIMIZER_QUICKSTART.md  OPTIMIZER_README.md  README.md  SQP_REGULARIZATION_IMPLEMENTATION.md
examples/: CMakeLists.txt  advanced_multi_curve.cpp  bond_pricing_examples.cpp  bspline_smoothing_demo.cpp  optimizer_example.cpp  regularization_demo.cpp  tiled_curve_example.cpp  vol_surface_calibration.cpp
libs/analytical_pricers/: CMakeLists.txt
libs/analytical_pricers/include/analytical_pricers/: BlackScholes.h
libs/analytical_pricers/src/: BlackScholes.cpp
libs/asynchelpers/: CMakeLists.txt
libs/asynchelpers/include/asynchelpers/: awaitablehelpers.h
libs/curve/: CMakeLists.txt
libs/curve/include/curve/: FlatRateCurve.h  ICurve.h  ICurveCalibration.h  Pillar.h  constants.h
libs/curve/src/: FlatRateCurve.cpp  ICurve.cpp  ICurveCalibration.cpp  Pillar.cpp
libs/datacontracts/: CMakeLists.txt  dependencies_config.json
libs/datacontracts/xsd/: Bond.xsd  CrossCurrencySwap.xsd  Forward.xsd  IRSwap.xsd  Instrument.xsd  Leg.xsd  Option.xsd  commons.xsd  marketdata.xsd  portfolio.xsd  quotes.xsd  vol.xsd  yield.xsd
libs/instruments/: CMakeLists.txt
libs/instruments/include/curves/: ICurve.h
libs/instruments/include/instruments/: Basket.h  FixFloatSwap.h  Instrument.h  InstrumentBase.h  Leg.h  XCSwap.h  bond.h  european_option.h  fra.h  swap.h
libs/instruments/include/market/: marketdata.h
libs/instruments/include/volatility/: IVolatility.h
libs/instruments/src/: FixFloatSwap.cpp  Instrument.cpp  InstrumentBase.cpp  Leg.cpp  XCSwap.cpp  bond.cpp  european_option.cpp  forward.cpp  fra.cpp  swap.cpp
libs/interpolation/: CMakeLists.txt  README.md
libs/interpolation/include/interpolation/: BilinearInterpolation.h  bspline.h  linear.h
libs/interpolation/src/: BilinearInterpolation.cpp  bspline.cpp  linear.cpp
libs/mathx/: CMakeLists.txt
libs/mathx/include/mathx/: bspline.h  mathx.hpp
libs/mathx/src/: bspline.cpp  mathx.cpp
libs/optimization/: CMakeLists.txt
libs/optimization/include/optimization/: Convex_Boxed_Optimizer.h  OptAlgoParams.h  OptSolution.h  OptimizerBase.h
libs/optimization/src/: OptimizerBase.cpp
libs/pricing/: BOND_PRICING_README.md  CMakeLists.txt
libs/pricing/include/market/: marketdata.h
libs/pricing/include/pricing/: FixFloatSwapPricer.h  GreekCalculator.h  IPricer.h  XCSwapPricer.h  bond.hpp  curve.hpp  engine.hpp  greeks.h
libs/pricing/include/pricing/bond/: bond.hpp  bond_future.hpp  carry_roll.hpp  inss.hpp
libs/pricing/include/pricing/curve/: bootstrapper.hpp  curvebase.h  fra.hpp  futures.hpp  instrument.hpp  irswap.hpp  ois_deposit.hpp  optimizer.hpp  tiled_curve.hpp  yield_curve.hpp
libs/pricing/include/pricing/instruments/: BarrierOption.hpp  Bond.hpp  CDS.hpp  CrossCurrencySwap.hpp  EuropeanOption.hpp  FRA.hpp  Future.hpp  Instrument.hpp  Swap.hpp  instruments.hpp
libs/pricing/src/: FixFloatSwapPricer.cpp  GreekCalculator.cpp  XCSwapPricer.cpp  bootstrapper.cpp  curve.cpp  curvebase.cpp  engine.cpp  fra.cpp  futures.cpp  irswap.cpp  ois_deposit.cpp  optimizer.cpp  tiled_curve.cpp  yield_curve.cpp
libs/pricing/src/bond/: bond.cpp  bond_future.cpp  carry_roll.cpp  inss.cpp
libs/signal/: CMakeLists.txt
libs/signal/include/signal/: CrossMovingAverage.h  ExponentialMovingAverage.h  SignalTransforms.h
libs/signal/src/: CrossMovingAverage.cpp  ExponentialMovingAverage.cpp  SignalTransforms.cpp
libs/time/: CMakeLists.txt
libs/time/include/time/: calendar_factory.hpp  calendars.hpp  calendarsenum.hpp  date.hpp  date_modifier.hpp  daycount.hpp  instant.h  scheduler.h
libs/time/src/: calendar_factory.cpp  calendars.cpp  date_modifier.cpp  daycount.cpp  scheduler.cpp
libs/volatility/: CMakeLists.txt  README.md
libs/volatility/include/volatility/: BlackScholes.h  ImpliedVolSurface.h  OptionQuote.h  VolPoint.h  VolatilityFactory.h
libs/volatility/src/: BlackScholes.cpp  ImpliedVolSurface.cpp
python/projection_models/: gp_projection.py  lstm.ipynb  yahoo.py
tests/: CMakeLists.txt  test_bspline.cpp
tests/asynchelpers/: test_async.cpp
tests/datacontracts/: datacontracts_tests.cpp
tests/instruments/: mock_curve.h  test_swap.cpp  test_xcswap.cpp
tests/interpolation/: test_bspline.cpp  test_bspline_smoothing.cpp
tests/mathx/: test_bspline.cpp  test_bspline_smoothing.cpp
tests/optimization/: test_optimization.cpp
tests/pricing/: test_bond_pricing.cpp  test_optimizer.cpp  test_pricing.cpp  test_tiled_curve.cpp
tests/signal/: test_cma.cpp  test_ema.cpp  test_transforms.cpp
tests/time/: test_calendars.cpp  test_date_modifier.cpp  test_scheduler.cpp
tests/volatility/: test_vol_surface_calibration.cpp
